Removendo cpf do aplicativo.
