# src/main/java/com/scheduly/api/web/controllers/ClientController.java
@@ -5,10 +5,8 @@ import com.scheduly.api.application.client.*;
 import com.scheduly.api.domain.client.Client;
 import com.scheduly.api.web.dtos.ClientRequest;
 import com.scheduly.api.web.dtos.ClientResponse;
-import com.scheduly.api.web.dtos.ClientUpdate;
 import com.scheduly.api.web.mappers.ClientMapper;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -23,22 +21,12 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ClientController implements ClientsApi {
 
-    private final CreateClientUseCase createClientUseCase;
     private final GetClientUseCase getClientUseCase;
     private final GetMyClientProfileUseCase getMyClientProfileUseCase;
     private final ListClientsUseCase listClientsUseCase;
     private final UpdateClientUseCase updateClientUseCase;
     private final DeleteClientUseCase deleteClientUseCase;
     private final ClientMapper clientMapper;
-
-    @Override
-    public ResponseEntity<ClientResponse> createClient(ClientRequest request) {
-        var client = clientMapper.toDomain(request);
-        var created = createClientUseCase.execute(client);
-        return ResponseEntity
-            .status(HttpStatus.CREATED)
-            .body(clientMapper.toResponse(created));
-    }
 
     @Override
     public ResponseEntity<ClientResponse> getClient(Long id) {
@@ -71,8 +59,8 @@ public class ClientController implements ClientsApi {
     public ResponseEntity<List<ClientResponse>> getClientByName(@RequestParam String name) {
         List<Client> clients = getClientUseCase.execute(name);
         List<ClientResponse> response = clients.stream()
-                .map(clientMapper::toResponse)
-                .collect(Collectors.toList());
+            .map(clientMapper::toResponse)
+            .collect(Collectors.toList());
         return ResponseEntity.ok(response);
     }
 
@@ -80,17 +68,9 @@ public class ClientController implements ClientsApi {
     public ResponseEntity<List<ClientResponse>> listClients() {
         List<Client> clients = listClientsUseCase.execute();
         List<ClientResponse> responses = clients.stream()
-                .map(clientMapper::toResponse)
-                .collect(Collectors.toList());
+            .map(clientMapper::toResponse)
+            .collect(Collectors.toList());
         return ResponseEntity.ok(responses);
-    }
-
-    @Override
-    public ResponseEntity<ClientResponse> updateClient(Long id, ClientUpdate request) {
-        Client client = clientMapper.toDomain(request);
-        Client updatedClient = updateClientUseCase.execute(id, client);
-        ClientResponse response = clientMapper.toResponse(updatedClient);
-        return ResponseEntity.ok(response);
     }
 
     @Override
